<resources>
    <string name="xianzhi">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="app_name">速步物流</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="br">本人</string>
    <string name="srdzhhmmcw">输入的账号或密码有误!</string>
    <string name="zk">展开</string>
    <string name="sq">收起</string>
    <string name="qndddtjcgqddsjjd">亲,您的订单提交成功,请等待司机接单!</string>
    <string name="srdmmbnbkbdfhdtszf">输入的密码不能包括标点符号等特殊字符!</string>
    <string name="tpscsb">图片上传失败!</string>
    <string name="ditp">第</string>
    <string name="qzdznxsztpo">亲,最多只能选4张图片哦!</string>
    <string name="gds">广东省</string>
    <string name="zss">中山市</string>
    <string name="nwqxsyggn">你无权限使用该功能!</string>
    <string name="hyyhwfsydkj">合约用户/经纪人无法使用抵扣卷</string>
    <string name="nwktylzfgn">你未开通银联支付功能!</string>
    <string name="qxzycsj">请选择用车时间</string>
    <string name="qxzycsja">请选择用车时间!</string>
    <string name="qrsccjl">确认删除此记录?</string>
    <string name="sfqxdd">是否取消订单?</string>
    <string name="ts">提示</string>
    <string name="sous">搜索</string>
    <string name="tjcsgd">提交次数过多</string>
    <string name="ss">是</string>
    <string name="f">否</string>
    <string name="qr">确认</string>
    <string name="zfcg">支付成功!</string>
    <string name="zfjgqrz">支付结果确认中</string>
    <string name="zfsb">支付失败!</string>
    <string name="xypz">需要配置</string>
    <string name="jcjgw">检查结果为：</string>
    <string name="jg">警告</string>
    <string name="qxddcg">取消订单成功!</string>
    <string name="qxddcgwxzf">取消订单成功!无须支付！</string>
    <string name="qxddsb">取消订单失败!</string>
    <string name="cxpdsb">重新派单失败!</string>
    <string name="jsdqpdcg">接受当前派单成功!</string>
    <string name="jsdqpdsb">接受当前派单失败!</string>
    <string name="qra">确&#160;&#160;&#160;&#160;认</string>
    <string name="qsrch">请输入称呼!</string>
    <string name="qsrzqddhhm">请输入正确的电话号码!</string>
    <string name="qsrsjhm">请输入手机号码</string>
    <string name="nxzdsjbfhyqqcxxz">你选择的时间不符合要求,请重新选择!</string>
    <string name="sqlname">spinnera</string>
    <string name="phone">name</string>
    <string name="pwd">pwd</string>
    <string name="qsrdlmm">请输入登录密码</string>
    <string name="dl">登录</string>
    <string name="zc">注册</string>
    <string name="yztg">验证通过</string>
    <string name="zfb">支付宝</string>
    <string name="yjzh">月结账户</string>
    <string name="xyk">信用卡</string>
    <string name="zccg">注册成功</string>
    <string name="wjmm">忘记密码</string>
    <string name="cclfwqcxxz">超出范围了,请重新选择位置</string>
    <string name="bmztjwfsydkj">不满足条件无法使用抵扣劵</string>
    <string name="sccga">上传成功</string>
    <string name="scsba">上传失败</string>
    <string name="m">满</string>
    <string name="di">抵</string>
    <string name="qxzdkj">请选择抵扣劵</string>
    <string name="gy">共有</string>
    <string name="zkjs">张，可节省</string>
    <string name="ygdyhjqgz">元，更多优惠敬请关注</string>
    <string name="dhcg">兑换成功</string>
    <string name="dhsb">兑换码错误，兑换失败</string>
    <string name="ysydkjwfzcsy">已使用抵扣劵，无法再次使用!</string>
    <string name="qsrsbjjrzh">请输入速步经纪人账号!</string>
    <string name="qsrmm">请输入密码!</string>
    <string name="ytcwfzcsy">请勿重复提交!</string>
    <string name="sycg">使用成功</string>
    <string name="dqwkyclqcxxz">当前无可用车辆，请重新选择!</string>
    <string name="qxzhwsxjbzzl">请选择货物属性及包装种类!</string>
    <string name="hgcp">化工产品</string>
    <string name="kbbz">卡板</string>
    <string name="zxbz">纸箱</string>
    <string name="mx">木箱</string>
    <string name="jx">胶箱</string>
    <string name="tz">桶装</string>
    <string name="sz">散装</string>
    <string name="qt">其他</string>
    <string name="nbcp">农副产品</string>
    <string name="ryp">日用品</string>
    <string name="jc">建材</string>
    <string name="juju">家具家居</string>
    <string name="jydq">家用电器</string>
    <string name="jxsb">机械设备</string>
    <string name="dzcp">电子产品</string>
    <string name="lbj">零部件</string>
    <string name="bzzl">包装种类:</string>
    <string name="qph">轻抛货</string>
    <string name="yshw">易碎货物</string>
    <string name="qsrgcrs">请输入跟车人数</string>
    <string name="srdgcrsbzq">输入的跟车人数不正确!</string>
    <string name="qxzzqddz">请选择正确的地址</string>
    <string name="qsrhfdsjhm">请输入11位合法的手机号码!</string>
    <string name="gsjhcyfcysbdlxyxyz">该手机号处于非常用设备登录,需重新验证</string>
    <string name="wzdjg">未找到结果</string>
    <string name="xzdz">选择地址</string>
    <string name="s">市</string>
    <string name="l">辆</string>
    <string name="d">吨</string>
    <string name="xz">现在</string>
    <string name="y">月</string>
    <string name="qcgs">全程高速</string>
    <string name="hgjg">海关监管</string>
    <string name="bswl">保税物流</string>
    <string name="dwb">带尾板</string>
    <string name="dcm">单侧门</string>
    <string name="scm">双侧门</string>
    <string name="eyyq">额外要求</string>
    <string name="r">日</string>
    <string name="c">尺</string>
    <string name="zr">周日</string>
    <string name="zy">周一</string>
    <string name="ze">周二</string>
    <string name="zs">周三</string>
    <string name="zsi">周四</string>
    <string name="zw">周五</string>
    <string name="zl">周六</string>
    <string name="ztd">中途点</string>
    <string name="cnlzh">从哪里装货</string>
    <string name="dnlxh">到哪里卸货 </string>
    <string name="qxzhhxhdd">请选择装货和卸货地点!</string>
    <string name="bqwzdjg">抱歉,未找到结果!</string>
    <string name="qdd">请等待...</string>
    <string name="zh">装货</string>
    <string name="ygfy">预估费用</string>
    <string name="ygyf">预估运费</string>
    <string name="shanghuo">上货</string>
    <string name="shanglou">上楼</string>
    <string name="xiahuo">下货</string>
    <string name="gence">跟车</string>
    <string name="ren">人</string>
    <string name="yuan">元</string>
    <string name="qtxztd">请填写中途点</string>
    <string name="sccg">删除成功</string>
    <string name="scsb">删除失败</string>
    <string name="lou">楼</string>
    <string name="yswcydz">已设为常用地址</string>
    <string name="qsrlcs">请输入楼层数</string>
    <string name="srdlcsbzq">输入的楼层数不正确</string>
    <string name="gl">公里</string>
    <string name="tjsb">添加失败</string>
    <string name="ymgl">元/公里</string>
    <string name="ytengl">元/10公里</string>
    <string name="yfdfgl">元/5.5公里</string>
    <string name="ysdfgl">元/7.5公里</string>
    <string name="yninegl">元/9公里</string>
    <string name="yndfgl">元/9.5公里</string>
    <string name="ytdfgl">元/10.5公里</string>
    <string name="ysygl">元/11公里</string>
    <string name="yssgl">元/13公里</string>
    <string name="onedun">1吨</string>
    <string name="threedun">3吨</string>
    <string name="firedun">5吨</string>
    <string name="eightdun">8吨</string>
    <string name="tendun">10吨</string>
    <string name="fifteendun">15吨</string>
    <string name="sqdwdun">17.5吨</string>
    <string name="esedun">22吨</string>
    <string name="esjdun">29吨</string>
    <string name="firefang">5方</string>
    <string name="thirteenfang">13方</string>
    <string name="fourteenfang">14方</string>
    <string name="twentyfivefang">25方</string>
    <string name="twentyeightfang">28方</string>
    <string name="wslfang">56方</string>
    <string name="lsbfang">68方</string>
    <string name="qsbfang">78方</string>
    <string name="thirtyfang">30方</string>
    <string name="thirtyonefang">31方</string>
    <string name="thirtysenverfang">37方</string>
    <string name="thirtyninefang">39方</string>
    <string name="fortyfivefang">45方</string>
    <string name="xscar">厢式货车</string>
    <string name="xskdcar">厢式开顶</string>
    <string name="glpbcar">高栏篷布</string>
    <string name="jzxcar">集装箱拖车</string>
    <string name="wxts">温馨提示</string>
    <string name="qx">取消</string>
    <string name="bsjdwsbyshmrcswbj">本手机定位设备已损坏,默认城市为北京</string>
    <string name="bj">北京</string>
    <string name="qdsccjl">确定删除此记录?</string>
    <string name="yzmcw">验证码错误！</string>
    <string name="xgcg">修改成功</string>
    <string name="zhmmcw">账号密码错误!</string>
    <string name="yzmyfsdsj">验证码已发送到手机!</string>
    <string name="msd">重发</string>
    <string name="qsryzm">请输入验证码!</string>
    <string name="fsz">发送中...</string>
    <string name="mmbnsylw">密码不能少于6位</string>
    <string name="lcsrdmmbxt">两次输入的密码不相同!</string>
    <string name="gsjhmybsy">该手机号码已被使用！</string>
    <string name="gsjcyfcysbdlqcxyz">该手机号处于非常用设备登录,需重新验证</string>
    <string name="qd">确定</string>
    <string name="tygipzyxsnjzcfzc">同1个IP在1小时内禁止重复注册！</string>
    <string name="jzz">加载中</string>
    <string name="wlyc">网络异常</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="sxg">》</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="mych">称 &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;呼:</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
</resources>