<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/dliva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:src="@drawable/logob"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/dllla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="70dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/dlivb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/phone"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/editext_phone"
            style="@style/dltext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/baise"
            android:hint="@string/qsrsjhm"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="20dp"
            android:textColor="#000000"
            android:textSize="20dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/dian" />

    <LinearLayout
        android:id="@+id/dlllbb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/dlivc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/hover"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/editext_password"
            style="@style/dltext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@color/baise"
            android:hint="@string/qsrdlmm"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="20dp"
            android:textColor="#000000"
            android:textSize="20dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/dian" />

    <Button
        android:id="@+id/btn_denglu"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_land"
        android:text="@string/dl"
        android:textColor="@color/baise"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/dlrla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/text_zuce"
            style="@style/dltext"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/zc"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/text_dianji"
            style="@style/dltext"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/wjmm"
            android:textColor="#000000" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="www.spvan.com"
        android:textColor="#000000"
        tools:ignore="HardcodedText" />

</LinearLayout>